# delete_simo_intermediary

./: .gitignore
application/: Cargo.toml  rust-toolchain.toml  rustfmt.toml
application/cli/: Cargo.toml  readme.md
application/program/: Cargo.toml  todo.txt
application/program/src/: entrypoint.rs  error.rs  extern_source.rs  instruction.rs  lib.rs  processor.rs  state.rs
development_environment/resource/docker/: .env  docker-compose.yaml
development_environment/resource/docker/service/solana/: dockerfile
development_environment/tool/rust/docker/: docker-compose.yaml
development_environment/tool/rust/docker/service/rust_stable_toolchain/: dockerfile
development_environment/tool/visual_studio_code_development_container/docker/: .devcontainer.json
